--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -8,6 +8,7 @@
 @import './utilities/_overlay-header.css';
 @import './utilities/_glass-card.css';
 @import './utilities/_glass-sheet.css';
+@import './utilities/_glass-menu.css';
 @import './utilities/_rwd-text.css';
 
 /* 主題定義與變數覆蓋 */
