--- a/src/assets/styles/_base.css
+++ b/src/assets/styles/_base.css
@@ -1,3 +1,9 @@
 html {
   overflow-y: auto !important;
 }
+
+@media all and (display-mode: standalone) {
+  html, body {
+    overscroll-behavior-y: contain;
+  }
+}
