feat: render components that don't need to be loaded asynchronously in advance to enjoy the built-in animation of router transformation

--- a/src/assets/styles/_base.css
+++ b/src/assets/styles/_base.css
@@ -3,7 +3,8 @@ html {
 }
 
 @media all and (display-mode: standalone) {
-  html, body {
+  html,
+  body {
     overscroll-behavior-y: contain;
   }
 }
