chore: format code

--- a/src/assets/styles/utilities/_gradient.css
+++ b/src/assets/styles/utilities/_gradient.css
@@ -1,20 +1,8 @@
 :root {
-  --golden-gradirnt-light: linear-gradient(
-    90deg, 
-    #b8860b, 
-    #daa520, 
-    #fff8dc, 
-    #daa520, 
-    #b8860b);
-  --golden-gradirnt-dark: linear-gradient(
-    90deg, 
-    #daa520, 
-    #ffd700, 
-    #ffffe0, 
-    #ffd700, 
-    #daa520);
+  --golden-gradirnt-light: linear-gradient(90deg, #b8860b, #daa520, #fff8dc, #daa520, #b8860b);
+  --golden-gradirnt-dark: linear-gradient(90deg, #daa520, #ffd700, #ffffe0, #ffd700, #daa520);
   --rainbow-gradirnt-light: linear-gradient(
-    90deg, 
+    90deg,
     #ff6b6b,
     #ff9966,
     #feca57,
@@ -22,7 +10,8 @@
     #48dbfb,
     #b19cd9,
     #ff9ff3,
-    #ff6b6b);
+    #ff6b6b
+  );
   --rainbow-gradirnt-dark: linear-gradient(
     90deg,
     #ffb3ba,
